--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,7 @@
 ---
+import '../styles/global.css'
+
+const headingForIndex = "My Astro Site"
 ---
 
 <html lang="en">
@@ -13,6 +16,6 @@
 		<a href="/">Home</a>
 		<a href="/about/">About</a>
 		<a href="/blog/">Blog</a>
-		<h1>My Astro Site</h1>
+		<h1>{headingForIndex}</h1>
 	</body>
 </html>
