Before the last lesson of the tutorial...

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -57,6 +57,14 @@ h1 {
   background-color: #ff9776;
 }
 
+ul li a {
+  text-decoration: none;
+}
+
+ul li a:hover {
+  text-decoration: underline;
+}
+
 .expanded {
   display: unset;
 }
