--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,5 +1,4 @@
 html {
-  background-color: lightblue;
   font-family: sans-serif;
 }
 
@@ -67,6 +66,19 @@ ul li a:hover {
 
 .expanded {
   display: unset;
+}
+
+.dark body {
+  background-color: #0d0950;
+  color: #fff;
+}
+
+.dark .nav-links a {
+  color: #fff;
+}
+
+.dark a {
+  color: white
 }
 
 @media screen and (min-width: 636px) {
